--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+# Core API dependencies
 fastapi>=0.115.0
 uvicorn[standard]>=0.34.0
-yt-dlp>=2024.0.0
-transformers>=4.47.0
-bertopic>=0.16.0
-torch>=2.5.0
 sqlalchemy>=2.0.0
 pydantic>=2.0.0
+
+# YouTube data extraction
+yt-dlp>=2024.0.0
+
+# ML dependencies (require build tools: apt install build-essential)
+# transformers>=4.47.0
+# bertopic>=0.16.0
+# torch>=2.5.0
