--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ ml = [
     "transformers>=4.47.0",
     "bertopic>=0.16.0",
     "torch>=2.5.0",
+    "sentence-transformers>=3.0.0",
 ]
 dev = [
     "pytest>=8.0.0",
